After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747358 - rtp: RTPJitterBufferMode enum missing from gtk-doc
rtp: RTPJitterBufferMode enum missing from gtk-doc
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-05 07:05 UTC by Ilya Konstantinov
Modified: 2015-04-05 19:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ilya Konstantinov 2015-04-05 07:05:45 UTC
RTPJitterBufferMode is documented (see rtpjitterbuffer.h) but isn't linked in the docs, e.g.:

http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-good-plugins/html/gst-plugins-good-plugins-rtpbin.html#GstRtpBin--buffer-mode

This way, the user has no way of knowing values except by looking in the source code.
Comment 1 Tim-Philipp Müller 2015-04-05 10:01:53 UTC
> This way, the user has no way of knowing values except by
> looking in the source code.

gst-inspect-1.0 rtpbin and gst-inspect-1.0 rtpjitterbuffer lists the values:

  buffer-mode         : Control the buffering algorithm in use
                        flags: readable, writable
                        Enum "RTPJitterBufferMode" Default: 1, "slave"
                           (0): none             - Only use RTP timestamps
                           (1): slave            - Slave receiver to sender clock
                           (2): buffer           - Do low/high watermark buffering
                           (4): synced           - Synchronized sender and receiver clocks
Comment 2 Tim-Philipp Müller 2015-04-05 10:47:23 UTC
commit d72fd97957ce0e2884e803199d64fbd3ca31fb8b
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Sun Apr 5 11:45:45 2015 +0100

    docs: add RTPJitterBufferMode enum to rtpbin docs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=747358
Comment 4 Tim-Philipp Müller 2015-04-05 19:09:23 UTC
Here you go:

commit 2fde2011b281ef5b0aededd605bf354ba707223a
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Sun Apr 5 20:06:09 2015 +0100

    docs: make GstRTCPSync enum show up in rtpbin docs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=747358



However, you will notice that this is actually not useful for anyone at all, because the enums are not in public header files and the values are not in the docs.

gst-inspect-1.0 is the canonical reference here.