docs: make GstRTCPSync enum show up in rtpbin docs

https://bugzilla.gnome.org/show_bug.cgi?id=747358